[package]
name = "tad_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = []
log = []


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
aarch64-cpu = "9.4.0"
byteorder = {version = "1", default-features = false}
tock-registers = {version = "0.9.x", default-features = false, features = ["register_types"], optional = true}
