[package]
name = "tad_os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = []
log = []

[dependencies]
defmt = {version = "0.3.1", optional = true}
aarch64-cpu = "9.4.0"
cortex-a = "8.1.1"
embedded-sdmmc = "0.6.0"
tock-registers = {version = "0.8.x", default-features = false, features = ["register_types"], optional = true}
